Revert "delete a folder"
This reverts commit aff545cbc8ec025ffd16810bc0716d13496b5bcd.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>CS30 Project</title>
 </head>
 <body>
-    <h1>Demos Made in Class</h1>
+    <h1>CS30 Projects</h1>
+
+    <ul>
+        <li><a href="/interactive-scene/">Interactive Scene</a></li>
+    </ul>
+    
+    <h2>Demos Made in Class</h2>
 
     <ul>
         <li><a href="/circlepaint/">Circle Paint</a></li>
