Make changes in folders

--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <title>CS30 Project</title>
 </head>
 <body>
-    <h1>CS30 Projects</h1>
+    <h1>CS 30 Class Demos</h1>
 
     <ul>
-        <li><a href="/interactive-scene/">Interactive Scene</a></li>
-    </ul>
-    
-    <h2>Demos Made in Class</h2>
-
-    <ul>
-        <li><a href="/circlepaint/">Circle Paint</a></li>
-        <li><a href="/lineart/">Line Art</a></li>
+        <li><a href="/01-circlepaint/">Circle Paint</a></li>
+        <li><a href="/02-lineart/">Line Art</a></li>
+        <li><a href="/03-imagedemo">Image Demo</a></li>
+        <li><a href="/04-bouncingball">Bouncing Balls</a></li>
 
     </ul>
     
